[metadata]
name = docker-compose-transfer
version = 0.5.0
url = https://github.com/pohmelie/docker-compose-transfer
author = pohmelie
author_email = multisosnooley@gmail.com
description = Docker compose companion for images save/load
long_description = file: readme.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = docker_compose_transfer
python_requires = >= 3.5
install_requires =
    docker >= 4.0.0, < 5.0.0
    docker-compose >= 1.27.0, < 2.0.0
    tqdm >= 4.23.4, < 5.0.0

[options.entry_points]
console_scripts =
    docker-compose-transfer = docker_compose_transfer:main
